--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 
             <!-- Replace with your name or brand -->
             <h1>
-              <div>Origano Pizza & Pasta</div>
+                 <div>Origano </div>
+               <div> Pizza & Pasta</div>
             </h1>
 
             <!-- Add a short description about yourself or your brand -->
