--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
             <img class="avatar avatar--rounded" src="images/icons/origano_logo_OK-V2.pdf.png" srcset="images/icons/origano_logo_OK-V2.pdf.png 2x" alt="LittleLink">
 
             <!-- Replace with your name or brand -->
-            <h1>
-                 <div>Origano </div>
-               <div> Pizza & Pasta</div>
-            </h1>
+<!--             <h1> -->
+<!--                  <div>Origano </div> -->
+<!--                <div> Pizza & Pasta</div> -->
+<!--             </h1> -->
 
             <!-- Add a short description about yourself or your brand -->
             <p>Bir Anne’nin Tutkusu, Şefin Ustalığı ve En Taze Malzemelerle Gerçek İtalyan Lezzeti</p>
@@ -138,7 +138,7 @@
 
       <!-- Feel free to add your own footer information, including updating `privacy.html` to reflect how your LittleLink fork is set up -->
       <footer>
-        <a href="privacy.html">Privacy Policy</a> | Build your own by forking <a href="https://littlelink.io" target="_blank" rel="noopener">LittleLink</a>
+        <a href="privacy.html">Privacy Policy</a> | <a href="https://littlelink.io" target="_blank" rel="noopener">LittleLink</a>
       </footer>
 
     </div>
