--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
             </h1> -->
 
             <!-- Add a short description about yourself or your brand -->
-            <p>Bir Anne’nin Tutkusu, Şefin Ustalığı ve En Taze Malzemelerle Gerçek İtalyan Lezzeti</p>
+            <p>Bir Anne’nin Tutkusu, Şefin Ustalığı ve En Taze Malzemelerle Gerçek İtalyan Lezzeti!</p>
 
             <!-- All your buttons go here -->
             <div class="button-stack" role="navigation">
               
               <!-- Origano Yemek Menüsü -->
-              <a class="button button-origano-yemek-men-s-" href="https://origanorestoran.com/menu/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/origano_logo_OK-V2.pdf.png" alt="Origano Yemek Menüsü icon">Origano Yemek Menüsü</a>
+              <a class="button button-origano-yemek-men-s-" href="https://origanorestoran.com/menu/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/origano_logo_OK-V2.pdf.png" alt="Origano Yemek Menüsü icon">Origano Menü</a>
               
               <!-- Alkol Menüsü -->
               <a class="button button-alkol-men-s-" href="https://origanodrinkmenu.my.canva.site/" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/alcohol_menu.png" alt="Alkol Menüsü icon">Bar Menüsü</a>
